# exchange-matcher

./: Cargo.toml  Makefile  autotest.sh
.github/workflows/: ci.yml
config/: match_app.toml
doc/: design.excalidraw
src/: event_router.rs  lib.rs  main.rs  matcher_app.rs  order_book.rs  order_bucket.rs  types.rs
src/engine/: manual.rs  match_engine.rs  matching.rs  mod.rs  order_book.rs
src/interface/: channel.rs  transport.rs
src/market/: publisher.rs
src/protocol/: mod.rs  proto.rs
testcase/: sse_32.csv  sse_58.csv  sse_test_case.csv
