[package]
name = "exchange-matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
ordered-float = "5.0.0"
sse-binary = { git = "https://github.com/xinchentechnote/fin-proto-rs", tag = "v0.2.0" }
binary-codec = { git = "https://github.com/xinchentechnote/fin-proto-rs", tag = "v0.2.0" }
