[package]
name = "exchange-matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
ordered-float = "5.0.0"
sse-binary = { git = "https://github.com/xinchentechnote/fin-proto-rs", tag = "v0.5.0" }
binary-codec = { git = "https://github.com/xinchentechnote/fin-proto-rs", tag = "v0.5.0" }
anyhow = "1.0.98"
tokio = {version = "1.47.1",features = ["full"]}
indexmap = "2.11.0"
async-trait = "0.1.89"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dashmap = "6.1.0"
